--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo_heroku</artifactId>
+	<artifactId>demo_heroku_docker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo_heroku</name>
+	<name>demo_heroku_docker</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
